# commands-base

./: .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/: __main__.py
nagare/admin/: __main__.py  admin.py  info.py
src/nagare/: __main__.py
src/nagare/admin/: __main__.py  admin.py  complete.py  completion.py  info.py  main.py  run.py
