[metadata]
name = nagare-commands-base
author = Net-ng
author_email = alain.poirier@net-ng.com
description = 'nagare-admin' executable
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/commands-base
    Tracker = https://github.com/nagareproject/commands-base/issues

[options]
zip_safe = False
packages = find:
install_requires =
    appdirs
    colorama
    nagare-config
    nagare-services
    nagare-services-logging
    nagare-commands

[options.entry_points]
console_scripts =
    nagare-admin = nagare.admin.admin:run
    nagare = nagare.admin.admin:run

nagare.commands =
    info = nagare.admin.info:Info

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
